tests/compile-fail/dangling_pointers/out_of_bounds_read2.stderr
error: Undefined Behavior: dereferencing pointer failed: alloc970 has size 2, so pointer to 1 byte starting at offset 5 is out-of-bounds
 --> $DIR/out_of_bounds_read2.rs:3:22
  |
3 |     let x = unsafe { *v.as_ptr().wrapping_offset(5) }; //~ ERROR out-of-bounds
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ dereferencing pointer failed: alloc970 has size 2, so pointer to 1 byte starting at offset 5 is out-of-bounds
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/out_of_bounds_read2.rs:3:22

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

